# search_game_handler

./: .black  .env  .gitignore  Dockerfile  README.md  alembic.ini  delet.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6f97319a5cc8_first_migrations.py
app/: alis.py  consumer.py  db.json  main.py  search_schems.py  settings.py
app/database/: db.py  db_session.py
app/handler_query/: handler_db.py
app/kafka/: consumer.py
app/models/: models.py
app/services/: cache.py
